--- a/style.css
+++ b/style.css
@@ -8,16 +8,17 @@
 /* font-family: 'Catamaran', Helvetica, Arial, sans-serif; */
 /* font-family: 'Lato', Helvetica, Arial, sans-serif; */
 /* font-family: 'Muli', Helvetica, Arial, sans-serif; */
-html {
+
+/* html {
     scroll-behavior: smooth;
-}
+} */
 
 h1,h2,h3,h4,h5,h6 {
     font-family: 'Catamaran', Helvetica, Arial, sans-serif;
     font-weight: 100;
 }
 
-.cus--nav, .cus--btn {
+.cus--btn {
     font-family: 'Lato', Helvetica, Arial, sans-serif;
 }
 
@@ -39,11 +40,6 @@ header {
     font-size: 2rem;
     font-weight: 100;
     color: #fdcc52;
-}
-
-.cus--nav {
-    display: flex;
-    justify-content: space-between;
 }
 
 .cus--nav-white {
